--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 
     <main class="container-fluid">
         <div class="row container-fluid">
-            <div class="col-xs-4 text-center headings">
-                <h5><b>Quality</b></h5>
+            <div class="col-12 text-center headings">
+                <h3><b>Quality</b></h3>
             </div>
-            <div class="col-xs-4  text-center headings">
-                <h5><b>Dependability</b></h5>
+            <div class="col text-center headings">
+                <h3><b>Dependability</b></h3>
             </div>
-            <div class="col-xs-4 text-center headings">
-                <h5><b>Easily Affordable</b></h5>
+            <div class="col text-center headings">
+                <h3><b>Easily Affordable</b></h3>
             </div>
 
         </div>
